--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         </table>
       </p>
       <h2>Picture of Octocat</h2>
-      <img src="octocat.png" alt="picture of octocat"
+      <img src="octocat.png" alt="picture of octocat"><br>
+      <a href="http://maratkornyev.com"> More info about me</a>
     </main>
   </body>
 </html>
