--- a/index.html
+++ b/index.html
@@ -37,9 +37,16 @@
           </tr>
         </table>
       </p>
-      <h2>Picture of Octocat</h2>
-      <img src="octocat.png" alt="picture of octocat"><br>
-      <a href="http://maratkornyev.com"> More info about me</a>
     </main>
+    <footer>
+      <p>
+        <h2>Picture of Octocat</h2>
+        <img src="octocat.png" alt="picture of octocat">
+        <br>
+        <a href="http://maratkornyev.com"> More info about me</a>
+        <br>
+        <a href="tel:+17867070644">Call me</a>
+      </p>
+    </footer>
   </body>
 </html>
