--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Marat Kornyev</title>
@@ -10,37 +10,40 @@
     </header>
     <main>
       <h2>Past</h2>
-      <p>I was born back in 2001, in Odessa, Ukaine. <br>Spent 15 years in my hometown and the next day after my 14th birthday moved to Florida. Started HS in Broward county. <br>Graduated in 2019 with Bilingual IB Diploma.</p>
+        <p>
+          I was born back in 2001, in Odessa, Ukaine. <br>Spent 15 years in my hometown and the next day after my 14th birthday moved to Florida. Started HS in Broward county. <br>Graduated in 2019 with Bilingual IB Diploma.
+        </p>
       <h2>Present</h2>
-      <p>Freshman student at U Miami. Do not know what to do with my life because I love too much stuff, such as:
+        <p>
+          Freshman student at U Miami. Do not know what to do with my life because I love too much stuff, such as:
+        </p>
         <ul>
           <li>Bio</li>
           <li>Design</li>
           <li>Coding</li>
         </ul>
         <h3>What I like</h3>
-        <table>
-          <tr>
-            <th>Music</th>
-            <th>Movies</th>
-            <th>Shows</th>
-          </tr>
-          <tr>
-            <td>Russian</td>
-            <td>Comedies</td>
-            <td>Comedies</td>
-          </tr>
-          <tr>
-            <td>American</td>
-            <td>Documentaries</td>
-            <td>Stupid Teen Stuff</td>
-          </tr>
-        </table>
-      </p>
+          <table>
+            <tr>
+              <th>Music</th>
+              <th>Movies</th>
+              <th>Shows</th>
+            </tr>
+            <tr>
+              <td>Russian</td>
+              <td>Comedies</td>
+              <td>Comedies</td>
+            </tr>
+            <tr>
+              <td>American</td>
+              <td>Documentaries</td>
+              <td>Stupid Teen Stuff</td>
+            </tr>
+          </table>
     </main>
     <footer>
-      <p>
         <h2>Picture of Octocat</h2>
+        <p>
         <img src="octocat.png" alt="picture of octocat">
         <br>
         <a href="http://maratkornyev.com"> More info about me</a>
