--- a/resume.html
+++ b/resume.html
@@ -1,20 +1,123 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <!--<link href="style.css" rel="stylesheet" />-->
     <meta charset="utf-8" />
     <title>Marat Kornyev's Résumé</title>
   </head>
   <body>
     <header>
+      <img src="mk-logo-resume.png" alt="Marat Kornyev's Logo" />
+
       <h1>Marat Kornyev</h1>
+
+      <nav>
+          <ul>
+            <li><a href="#EDUCATION">Education</a></li>
+            <li><a href="#EXPERIENCE">Experiences</a></li>
+            <li><a href="#SKILLS">Skills</a></li>
+          </ul>
+      </nav>
     </header>
+
     <main>
+
     <section>
+      <h2 id="EDUCATION">EDUCATION</h2>
+        <article>
+          <h3>Gymnasium #1</h3>
+          <p>
+            Odessa, Ukraine - <em>Middle School Diploma</em>
+          </p>
+          <p>
+            <em>SEPTEMBER 2007 - JANUARY 2016</em>
+          </p>
+        </article>
+
+        <article>
+            <h3>North Broward Preparatory School</h3>
+            <p>
+              Coconut Creek, FL, USA - <em>High School Diploma and Bilingual IB Diploma</em>
+            </p>
+            <p>
+              <em>FEBRUARY 2016 - MAY 2019</em>
+            </p>
+        </article>
+
+        <article>
+          <h3>University of Miami</h3>
+          <p>
+            Coral Gables, FL, USA - <em>Bachelor of Science in Nursing</em>
+          </p>
+          <p>
+            <em>JANUARY 2020 - PRESENT</em>
+          </p>
+        </article>
     </section>
+
     <section>
+      <h2 id="EXPERIENCE">EXPERIENCE</h2>
+        <article>
+          <h3>Root Creative Group</h3>
+          <p>
+            <em>JUNE 2019 - PRESENT</em>
+          </p>
+          <p>
+            CMO (Chief Marketing Officer), web design, WebSite creation, advertisement on the web (context and target), event planning and management, radio advertisement, Instagram layout etc.
+          </p>
+        </article>
+
+        <article>
+          <h3>MaxArt Events</h3>
+          <p>
+            <em>JUNE 2019 - PRESENT</em>
+          </p>
+          <p>
+            SMM (Social Media Marketing) Manager, writing posts for social media, creation of content plan, advertisement on the web (targeted advertisement), etc.
+          </p>
+        </article>
+
+        <article>
+          <h3>Beit Grand</h3>
+          <p>
+            <em>JUNE 2019 - PRESENT</em>
+          </p>
+          <p>
+            Creation of the design for web pages, calendar development, social media posts design, greeting card design, etc.
+          </p>
+        </article>
+    </section>
+
+    <section>
+      <h2 id="SKILLS">SKILLS</h2>
+        <ul>
+          <li><strong>Languages:</strong>
+            <ul>
+              <li>English <em>(fluent)</em></li>
+              <li>Russian <em>(fluent)</em></li>
+              <li>Ukrainian <em>(fluent)</em></li>
+              <li>Spanish <em>(basic)</em></li>
+              <li>French <em>(basic)</em></li>
+            </ul>
+          </li>
+          <li><strong>PhotoShop</strong></li>
+          <li><strong>Illustrator</strong></li>
+          <li><strong>Google Drive</strong></li>
+          <li><strong>FlashBox</strong></li>
+          <li><strong>Communication</strong></li>
+          <li><strong>HTML</strong></li>
+        </ul>
     </section>
     </main>
+
     <footer>
+      Contact me:
+        <ul>
+          <li><a href="tel:+1(786)707-0644">Call</a>;</li>
+          <li><a href="mailto:kornevmarat@gmail.com">Email</a>;</li>
+          <li><a href="http://t.me/maratkornyev/">Telegram</a>;</li>
+          <li><a href="https://maratkornyev.com/">Learn More</a>;</li>
+        </ul>
     </footer>
   </body>
 </html>
