--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <br>
         <a href="http://maratkornyev.com"> More info about me</a>
         <br>
-        <a href="tel:+17867070644">Call me</a>
+        <a href="tel:+17867070644">Call me</a><br>
+        <a href="resume.html">Résumé</a>
       </p>
     </footer>
   </body>
