resume-new-link

--- a/resume.html
+++ b/resume.html
@@ -114,9 +114,9 @@
       Contact me:
         <ul>
           <li><a href="tel:+1(786)707-0644">Call</a>;</li>
-          <li><a href="mailto:kornevmarat@gmail.com">Email</a>;</li>
-          <li><a href="http://t.me/maratkornyev/">Telegram</a>;</li>
-          <li><a href="https://maratkornyev.com/">Learn More</a>;</li>
+          <li><a href="mailto:kornevmarat@gmail.com">Email</a></li>
+          <li><a href="http://t.me/maratkornyev/">Telegram</a></li>
+          <li><a href="https://about.me/maratkornyev">Learn More</a></li>
         </ul>
     </footer>
   </body>
