--- a/old-staff/resume.html
+++ b/old-staff/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!--<link href="style.css" rel="stylesheet" />-->
+    <link href="style.css" rel="stylesheet" />
     <meta charset="utf-8" />
     <title>Marat Kornyev's Résumé</title>
   </head>
