--- a/about-me.html
+++ b/about-me.html
@@ -4,11 +4,12 @@
 <head>
 	<meta charset="utf-8">
 	<title>Marat Kornyev | About Me</title>
-		<!--Page refresher-->
+		<!--Page refresher
 		<meta http-equiv="refresh" content="5" />
-		<!--Page refresher-->
+		Page refresher-->
 	<link rel="shortcut icon" type="img/gif" href="img/favicon.gif" />
 	<link href="css/style.css" rel="stylesheet"  />
+	<link href="css/about-me.css" rel="stylesheet"  />
 </head>
 <body>
     <div id="wrapper">
@@ -32,17 +33,53 @@
 			</header>
 
 			<main>
+
+				<article>
+					<h2>Who am I?</h2>
+					<p>
+
+					</p>
+				</article>
+
+				<article>
+					<h2>Where am I from?</h2>
+					<p>
+
+					</p>
+				</article>
+
+				<article>
+					<h2>What do I do?</h2>
+					<p>
+
+					</p>
+				</article>
+
+				<article>
+					<h2>What do I like to do?</h2>
+					<p>
+
+					</p>
+				</article>
+
+				<article>
+					<h2>What will I do?</h2>
+					<p>
+
+					</p>
+				</article>
+
 			</main>
 
 			<footer>
-        <p>Contact me:</p>
-        <ul>
-          <li><a href="tel:+1(786)707-0644">Call</a></li>
-          <li><a href="mailto:kornevmarat@gmail.com">Email</a></li>
-          <li><a href="http://t.me/maratkornyev/">Telegram</a></li>
-          <li><a href="https://about.me/maratkornyev">Learn More</a></li>
-        </ul>
-      </footer>
+				<p>CONTACT ME:</p>
+				<ul>
+					<li><a href="tel:+1(786)707-0644">CALL</a></li>
+					<li><a href="mailto:kornevmarat@gmail.com">EMAIL</a></li>
+					<li><a href="http://t.me/maratkornyev/">TELEGRAM</a></li>
+					<li><a href="https://about.me/maratkornyev">LEARN MORE</a></li>
+				</ul>
+			</footer>
     </div>
 </body>
 </html>
