--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Marat Kornyev | Home</title>
-			<!--Page refresher-->
-			<meta http-equiv="refresh" content="5" />
-			<!--Page refresher-->
 		<link rel="shortcut icon" type="img/gif" href="img/favicon.gif" />
 		<link href="css/style.css" rel="stylesheet"  />
+		<link href="css/index.css" rel="stylesheet"  />
 	</head>
 	<body>
 		<div id="wrapper">
@@ -30,8 +28,13 @@
 				</nav>
 			</header>
 			<main>
-				<section id="">
-				</section>
+				<img src="img/photo-of-me.png" alt="Photo of Marat" id="photo-of-me"/>
+				<article class="welcome-message-and-image">
+					<h2>WELCOME</h2>
+					<p id="welcome-message">
+						Hello and welcome to my world. My name is Marat Kornyev and I am your tour guide. Here is all the information about me both personal and professional life.
+					</p>
+				</article>
 			</main>
 
 			<footer>
