--- a/about-me.html
+++ b/about-me.html
@@ -15,6 +15,7 @@
     <div id="wrapper">
 			<header>
 				<h1>Marat Kornyev</h1>
+				<nav id="navbar">
 					<ul>
 						<li><a href="index.html">MARAT KORNYEV</a></li>
 						<li><a href="about-me.html">ABOUT ME</a></li>
