--- a/about-me.html
+++ b/about-me.html
@@ -33,38 +33,38 @@
 
 			<main>
 
-				<article>
+				<article id="who">
 					<h2>Who am I?</h2>
 					<p>
-
+						I am a freshman at the University of Miami. Who started his journey at the beginning of the 2000s. I am a student, a designer, a learner, a risktaker, and an openminded person, who loves challenges because they make my life interesting. 
 					</p>
 				</article>
 
-				<article>
+				<article id="where">
 					<h2>Where am I from?</h2>
 					<p>
-
+						I was born in a cold country located in the middle of the Eurasia continent. It is the biggest country in Europe, known as Ukraine. I was born in the southern part of it, in the city of Odessa, the capital of laughter.
 					</p>
 				</article>
 
-				<article>
+				<article id="what-do">
 					<h2>What do I do?</h2>
 					<p>
-
+						From an early age, I always wanted to become a surgeon, and now I am a first-year pre-med student at the University of Miami, FL. Also, I worked as a digital designer back in my home country.
 					</p>
 				</article>
 
-				<article>
+				<article id="what-like">
 					<h2>What do I like to do?</h2>
 					<p>
-
+						I consider myself a versatile person. I am interested in biology, design, web design, and marketing. Also, I love learning new languages and watch TV shows.
 					</p>
 				</article>
 
-				<article>
+				<article id="what-will">
 					<h2>What will I do?</h2>
 					<p>
-
+						In the future, I plan on becoming a general surgeon and help people to make their life better. Also, I am planning to continue working on my designing skills because trough my works, I can express myself and let the negative energy go.
 					</p>
 				</article>
 
