--- a/resume.html
+++ b/resume.html
@@ -81,6 +81,12 @@
               <p><em>JUNE 2019 - PRESENT</em></p>
               <p>Creation of the design for web pages, calendar development, social media posts design, greeting card design, etc.</p>
             </article>
+
+            <article>
+              <h3>UNISCHEDULER</h3>
+              <p><em>MARCH 2020</em></p>
+              <p>A website used by hundreds of students that converts one's class schedule to a format that can be easily exported into any calendar service.</p>
+            </article>
         </section>
 
         <section id="skills" class="skills">
