--- a/about-me.html
+++ b/about-me.html
@@ -4,14 +4,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>Marat Kornyev | About Me</title>
-		<!--Page refresher
-		<meta http-equiv="refresh" content="5" />
-		Page refresher-->
 	<link rel="shortcut icon" type="img/gif" href="img/favicon.gif" />
 	<link href="css/style.css" rel="stylesheet"  />
-	<link href="css/about-me.css" rel="stylesheet"  />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
-<body>
+<body id="about">
     <div id="wrapper">
 			<header>
 				<h1>Marat Kornyev</h1>
@@ -36,7 +33,7 @@
 				<article id="who">
 					<h2>Who am I?</h2>
 					<p>
-						I am a freshman at the University of Miami. Who started his journey at the beginning of the 2000s. I am a student, a designer, a learner, a risktaker, and an openminded person, who loves challenges because they make my life interesting. 
+						I am a freshman at the University of Miami. Who started his journey at the beginning of the 2000s. I am a student, a designer, a learner, a risktaker, and an openminded person, who loves challenges because they make my life interesting.
 					</p>
 				</article>
 
@@ -67,16 +64,15 @@
 						In the future, I plan on becoming a general surgeon and help people to make their life better. Also, I am planning to continue working on my designing skills because trough my works, I can express myself and let the negative energy go.
 					</p>
 				</article>
-
 			</main>
 
 			<footer>
-				<p>CONTACT ME:</p>
 				<ul>
-					<li><a href="tel:+1(786)707-0644">CALL</a></li>
-					<li><a href="mailto:kornevmarat@gmail.com">EMAIL</a></li>
-					<li><a href="http://t.me/maratkornyev/">TELEGRAM</a></li>
-					<li><a href="https://about.me/maratkornyev">LEARN MORE</a></li>
+					<li id="contact">CONTACT ME:</li>
+					<li id="call"><a href="tel:+1(786)707-0644">CALL</a></li>
+					<li id="email"><a href="mailto:kornevmarat@gmail.com">EMAIL</a></li>
+					<li id="telegram"><a href="http://t.me/maratkornyev/">TELEGRAM</a></li>
+					<li id="more"><a href="https://about.me/maratkornyev">LEARN MORE</a></li>
 				</ul>
 			</footer>
     </div>
