--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 		<title>Marat Kornyev | Home</title>
 		<link rel="shortcut icon" type="img/gif" href="img/favicon.gif" />
 		<link href="css/style.css" rel="stylesheet"  />
-		<link href="css/index.css" rel="stylesheet"  />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 	</head>
-	<body>
+	<body id="home">
 		<div id="wrapper">
 			<header>
 				<h1>Marat Kornyev</h1>
@@ -28,22 +29,22 @@
 				</nav>
 			</header>
 			<main>
-				<img src="img/photo-of-me.png" alt="Photo of Marat" id="photo-of-me"/>
-				<article class="welcome-message-and-image">
+				<img src="img/photo-of-me.png" alt="Photo of Marat" />
+				<article>
 					<h2>WELCOME</h2>
-					<p id="welcome-message">
+					<p>
 						Hello and welcome to my world. My name is Marat Kornyev and I am your tour guide. Here is all the information about me both personal and professional life.
 					</p>
 				</article>
 			</main>
 
 			<footer>
-        <p>CONTACT ME:</p>
         <ul>
-          <li><a href="tel:+1(786)707-0644">CALL</a></li>
-          <li><a href="mailto:kornevmarat@gmail.com">EMAIL</a></li>
-          <li><a href="http://t.me/maratkornyev/">TELEGRAM</a></li>
-          <li><a href="https://about.me/maratkornyev">LEARN MORE</a></li>
+					<li id="contact">CONTACT ME:</li>
+          <li id="call"><a href="tel:+1(786)707-0644">CALL</a></li>
+          <li id="email"><a href="mailto:kornevmarat@gmail.com">EMAIL</a></li>
+          <li id="telegram"><a href="http://t.me/maratkornyev/">TELEGRAM</a></li>
+          <li id="more"><a href="https://about.me/maratkornyev">LEARN MORE</a></li>
         </ul>
       </footer>
 		</div>
