--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
     <title>Marat Kornyev | Résumé</title>
     <link rel="shortcut icon" type="img/gif" href="img/favicon.gif" />
     <link href="css/style.css" rel="stylesheet" />
-    <link href="css/resume.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <div id="wrapper">
@@ -28,7 +28,7 @@
         </ul>
       </nav>
 
-      <main>
+      <main id="resume">
         <section id="education">
           <h2>EDUCATION</h2>
             <article>
@@ -112,12 +112,12 @@
         </section>
       </main>
       <footer>
-        <p>CONTACT ME:</p>
         <ul>
-          <li><a href="tel:+1(786)707-0644">CALL</a></li>
-          <li><a href="mailto:kornevmarat@gmail.com">EMAIL</a></li>
-          <li><a href="http://t.me/maratkornyev/">TELEGRAM</a></li>
-          <li><a href="https://about.me/maratkornyev">LEARN MORE</a></li>
+					<li id="contact">CONTACT ME:</li>
+          <li id="call"><a href="tel:+1(786)707-0644">CALL</a></li>
+          <li id="email"><a href="mailto:kornevmarat@gmail.com">EMAIL</a></li>
+          <li id="telegram"><a href="http://t.me/maratkornyev/">TELEGRAM</a></li>
+          <li id="more"><a href="https://about.me/maratkornyev">LEARN MORE</a></li>
         </ul>
       </footer>
     </div>
