--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 		<meta charset="utf-8">
 		<title>Marat Kornyev | Home</title>
 		<link rel="shortcut icon" type="img/gif" href="img/favicon.gif" />
-		<link href="css/style.css" rel="stylesheet"  />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link href="css/style.css" media="screen" rel="stylesheet"  />
+		<link href="css/mobile.css" media="screen" rel="stylesheet" />
 
 	</head>
 	<body id="home">
