--- a/social-life.html
+++ b/social-life.html
@@ -5,8 +5,9 @@
 		<meta charset="utf-8">
 		<title>Marat Kornyev | About Me</title>
 		<link rel="shortcut icon" type="img/gif" href="img/favicon.gif" />
-		<link href="css/style.css" rel="stylesheet"  />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link href="css/style.css" media="screen" rel="stylesheet"  />
+		<link href="css/mobile.css" media="screen" rel="stylesheet" />
 		<script src="https://kit.fontawesome.com/2a39210852.js" crossorigin="anonymous"></script>
 	</head>
 	<body id="social-life">
