--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 				</article>
 			</main>
 
+			<html><head><title>Fyrebox</title></head><body><a href="https://www.fyrebox.com/webgame/qNG0KJP9a/JwEDV91ao" onclick="window.open(this.href,  null, 'height=400, width=700, toolbar=0, location=0, status=1, scrollbars=1, resizable=1'); return false">Take The Quiz!</a></body></html>
+
 			<footer>
         <ul>
 					<li id="contact">CONTACT ME:</li>
