--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 					<p>
 						Hello and welcome to my world. My name is Marat Kornyev and I am your tour guide. Here is all the information about me both personal and professional life.
 					</p>
+					<h2>QUIZ TIME</h2>
+					<a href="https://www.fyrebox.com/webgame/qNG0KJP9a/JwEDV91ao" onclick="window.open(this.href,  null, 'height=400, width=700, toolbar=0, location=0, status=1, scrollbars=1, resizable=1'); return false">Take The Quiz!</a>
 				</article>
 			</main>
-
-			<html><head><title>Fyrebox</title></head><body><a href="https://www.fyrebox.com/webgame/qNG0KJP9a/JwEDV91ao" onclick="window.open(this.href,  null, 'height=400, width=700, toolbar=0, location=0, status=1, scrollbars=1, resizable=1'); return false">Take The Quiz!</a></body></html>
 
 			<footer>
         <ul>
