--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">MARAT KORNYEV</a></li>
+						<li><a href="https://www.fyrebox.com/webgame/qNG0KJP9a/JwEDV91ao" onclick="window.open(this.href,  null, 'height=400, width=700, toolbar=0, location=0, status=1, scrollbars=1, resizable=1'); return false">QUIZ TIME!</a></li>
 						<li><a href="about-me.html">ABOUT ME</a></li>
 						<li><a href="social-life.html">SOCIAL LIFE</a></li>
 						<li><a href="resume.html">RÉSUMÉ</a>
@@ -36,7 +37,7 @@
 					<p>
 						Hello and welcome to my world. My name is Marat Kornyev and I am your tour guide. Here is all the information about me both personal and professional life.
 					</p>
-					<h2><a href="https://www.fyrebox.com/webgame/qNG0KJP9a/JwEDV91ao" onclick="window.open(this.href,  null, 'height=400, width=700, toolbar=0, location=0, status=1, scrollbars=1, resizable=1'); return false">QUIZ TIME</a></h2>
+					<h2><a href="https://www.fyrebox.com/webgame/qNG0KJP9a/JwEDV91ao" onclick="window.open(this.href,  null, 'height=400, width=700, toolbar=0, location=0, status=1, scrollbars=1, resizable=1'); return false">QUIZ TIME!</a></h2>
 				</article>
 			</main>
 
